--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
 	},
 	"dependencies": {
 		"-": "^0.0.1",
+		"@emotion/react": "^11.9.0",
+		"@emotion/styled": "^11.8.1",
+		"@mui/material": "^5.6.4",
+		"@web3-react/core": "^8.0.23-beta.0",
+		"@web3-react/eip1193": "^8.0.18-beta.0",
+		"@web3-react/empty": "^8.0.12-beta.0",
+		"@web3-react/types": "^8.0.12-beta.0",
+		"@web3-react/url": "^8.0.17-beta.0",
 		"ahooks": "^3.3.10",
 		"D": "^1.0.0",
 		"dayjs": "^1.11.1",
