feat: - 提供了对svgComponent的支持 - 支持了less with css module - 编写了自定义webpack plugin , 用于打印日志 - 预研了i18n国际化方案和技术支持(主要是uniSwap正在使用的crowdin) , 因还没有完善的产品规划和设计 , 不着急实施. - 优化了webpack的配置,去除冗余项 - 支持了router - 加入了d.ts声明文件 - 提供了对业务组件的统一封装API , 还在持续完善中 - 完善了tsconfig和webpack的alias,使得运行时统一使用扁平化路径 - 使用MUI搭建DEMO页面 , 用于评估客制化UI方案(进行中)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,6 @@
 			"ES2017" ,
 			"ES2018" ,
 			"ESNext" ,
-			"DOM" ,
 			"DOM.Iterable" ,
 			"WebWorker" ,
 			"ScriptHost" ,
@@ -52,7 +51,8 @@
 			"ESNext.Array" ,
 			"ESNext.Intl" ,
 			"ESNext.Symbol" ,
-			"react"
+			"react",
+			"DOM"
 		] ,
 		"module" : "CommonJS" ,
 		"moduleResolution" : "node" ,
@@ -63,40 +63,35 @@
 		"noUnusedLocals" : false ,
 		"noUnusedParameters" : false ,
 		"paths" : {
-			"*/*.ts" : [
-				"*"
-			] ,
-			"common/*" : [
+			"*/*.ts" : ["*"] ,
+			"@@common/*" : [
 				"src/common/*"
 			] ,
-			"common/utils" : [
-				"src/common/utils/index.ts"
+			"@@utils" : [
+				"src/utils/index.ts"
 			] ,
-			"common/utils/*" : [
-				"src/common/utils/*"
+			"@@utils/*" : [
+				"src/utils/*"
 			] ,
-			"common/pureComponents" : [
-				"src/common/pureComponents/index.ts"
+			"@@components" : [
+				"src/utils/components/index.ts"
 			] ,
-			"common/pureComponents/*" : [
-				"src/common/pureComponents/*"
+			"@@components/*" : [
+				"src/utils/components/*"
 			] ,
-			"common/requests" : [
+			"-@@common/requests" : [
 				"src/common/requests/index.ts"
 			] ,
-			"common/env" : [
-				"src/common/env.ts"
-			] ,
-			"common/routes" : [
+			"-@@common/routes" : [
 				"src/common/routes/index.tsx"
 			] ,
-			"common/Public/*" : [
-				"src/common/Public/*"
+			"@@Public/*" : [
+				"Public/*"
 			],
-			"common/Auth" : [
-				"src/common/Auth/Controller.tsx"
+			"@@pages/*" : [
+				"src/pages/*"
 			],
-			"common/mobxState" : [
+			"@@mobxState" : [
 				"src/common/mobxState/index"
 			] 
 			
