--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
 	"name": "eth-web-front",
 	"description": "Mainri Labs' font-end eth font-end project",
 	"scripts": {
-		"start": "node --inspect-brk webpack.main.mjs server",
+		"start": "node webpack.main.mjs server",
+		"debug": "node --inspect-brk webpack.main.mjs server",
 		"build": "node webpack.main.mjs build"
 	},
 	"dependencies": {
 		"-": "^0.0.1",
 		"@emotion/react": "^11.9.0",
 		"@emotion/styled": "^11.8.1",
+		"@mui/lab": "^5.0.0-alpha.80",
 		"@mui/material": "^5.6.4",
+		"@svgr/webpack": "^6.2.1",
 		"@web3-react/core": "^8.0.23-beta.0",
 		"@web3-react/eip1193": "^8.0.18-beta.0",
 		"@web3-react/empty": "^8.0.12-beta.0",
@@ -52,6 +55,7 @@
 		"html-webpack-plugin": "^5.5.0",
 		"less": "^4.1.2",
 		"less-loader": "^10.2.0",
+		"portfinder": "^1.0.28",
 		"react-hot-loader": "^4.13.0",
 		"style-loader": "^3.3.1",
 		"typescript": "^4.6.3",
@@ -64,7 +68,7 @@
 		"url": "git+https://github.com/CainKane/eth-web-front.git"
 	},
 	"homepage": "https://github.com/CainKane/eth-web-front#readme",
-	"main": "src/main.ts",
+	"main": "src/main.tsx",
 	"keywords": [],
 	"author": "Kane",
 	"license": "ISC",
