--- a/package.json
+++ b/package.json
@@ -7,11 +7,6 @@
 		"build": "node webpack.main.mjs build"
 	},
 	"dependencies": {
-		"-": "^0.0.1",
-		"@emotion/react": "^11.9.0",
-		"@emotion/styled": "^11.8.1",
-		"@mui/lab": "^5.0.0-alpha.80",
-		"@mui/material": "^5.6.4",
 		"@svgr/webpack": "^6.2.1",
 		"@web3-react/core": "^8.0.23-beta.0",
 		"@web3-react/eip1193": "^8.0.18-beta.0",
@@ -19,7 +14,7 @@
 		"@web3-react/types": "^8.0.12-beta.0",
 		"@web3-react/url": "^8.0.17-beta.0",
 		"ahooks": "^3.3.10",
-		"D": "^1.0.0",
+		"antd": "^4.20.3",
 		"dayjs": "^1.11.1",
 		"lodash": "^4.17.21",
 		"mobx": "^6.5.0",
