feat: 增加了对普通svg-url的支持; feat: 完善UI demo chore.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "eth-web-front",
+	"name": "Daotion-web-interface",
 	"description": "Mainri Labs' font-end eth font-end project",
 	"scripts": {
 		"start": "node webpack.main.mjs server",
