--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
 		"@babel/preset-react": "^7.14.5",
 		"@babel/preset-typescript": "^7.14.5",
 		"@hot-loader/react-dom": "^17.0.2",
+		"@types/less": "^3.0.3",
+		"@types/lodash": "^4.14.182",
 		"@types/react": "^17.0.44",
 		"@types/react-dom": "^17.0.16",
 		"@types/react-router-dom": "^5.3.3",
