--- a/package.json
+++ b/package.json
@@ -8,6 +8,20 @@
 	},
 	"dependencies": {
 		"@svgr/webpack": "^6.2.1",
+		"@web3-onboard/common": "^2.0.4",
+		"@web3-onboard/fortmatic": "^2.0.2",
+		"@web3-onboard/gnosis": "^2.0.1",
+		"@web3-onboard/injected-wallets": "^2.0.2",
+		"@web3-onboard/keepkey": "^2.0.1",
+		"@web3-onboard/keystone": "^2.0.1",
+		"@web3-onboard/ledger": "^2.0.1",
+		"@web3-onboard/magic": "^2.0.0",
+		"@web3-onboard/portis": "^2.0.0",
+		"@web3-onboard/react": "^2.0.6",
+		"@web3-onboard/torus": "^2.0.1",
+		"@web3-onboard/trezor": "^2.0.2",
+		"@web3-onboard/walletconnect": "^2.0.1",
+		"@web3-onboard/walletlink": "^2.0.1",
 		"@web3-react/core": "^8.0.23-beta.0",
 		"@web3-react/eip1193": "^8.0.18-beta.0",
 		"@web3-react/empty": "^8.0.12-beta.0",
@@ -15,10 +29,13 @@
 		"@web3-react/url": "^8.0.17-beta.0",
 		"ahooks": "^3.3.10",
 		"antd": "^4.20.3",
+		"buffer": "^6.0.3",
 		"dayjs": "^1.11.1",
+		"ethers": "^5.5.4",
 		"lodash": "^4.17.21",
 		"mobx": "^6.5.0",
 		"mobx-react": "^7.3.0",
+		"node-polyfill-webpack-plugin": "^1.1.4",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^6.3.0"
