--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
 	},
 	"dependencies": {
 		"@svgr/webpack": "^6.2.1",
-		"@web3-onboard/common": "^2.0.4",
+		"@web3-onboard/common": "^2.0.9",
 		"@web3-onboard/fortmatic": "^2.0.2",
 		"@web3-onboard/gnosis": "^2.0.1",
-		"@web3-onboard/injected-wallets": "^2.0.2",
-		"@web3-onboard/keepkey": "^2.0.1",
-		"@web3-onboard/keystone": "^2.0.1",
-		"@web3-onboard/ledger": "^2.0.1",
-		"@web3-onboard/magic": "^2.0.0",
+		"@web3-onboard/injected-wallets": "^2.0.6",
+		"@web3-onboard/keepkey": "^2.0.3",
+		"@web3-onboard/keystone": "^2.0.3",
+		"@web3-onboard/ledger": "^2.0.4",
+		"@web3-onboard/magic": "^2.0.3",
 		"@web3-onboard/portis": "^2.0.0",
-		"@web3-onboard/react": "^2.0.6",
+		"@web3-onboard/react": "^2.1.6",
 		"@web3-onboard/torus": "^2.0.1",
-		"@web3-onboard/trezor": "^2.0.2",
+		"@web3-onboard/trezor": "^2.0.5",
 		"@web3-onboard/walletconnect": "^2.0.1",
 		"@web3-onboard/walletlink": "^2.0.1",
 		"@web3-react/core": "^8.0.23-beta.0",
@@ -31,7 +31,11 @@
 		"antd": "^4.20.3",
 		"buffer": "^6.0.3",
 		"dayjs": "^1.11.1",
-		"ethers": "^5.5.4",
+		"ahooks": "^3.3.12",
+		"antd": "^4.20.5",
+		"buffer": "^6.0.3",
+		"dayjs": "^1.11.2",
+		"ethers": "^5.6.6",
 		"lodash": "^4.17.21",
 		"mobx": "^6.5.0",
 		"mobx-react": "^7.3.0",
@@ -75,6 +79,7 @@
 		"typescript": "^4.6.3",
 		"webpack": "^5.72.0",
 		"webpack-dev-server": "^4.8.1",
+		"node-polyfill-webpack-plugin": "^1.1.4",
 		"webpack-merge": "^5.8.0"
 	},
 	"repository": {
@@ -89,5 +94,5 @@
 	"bugs": {
 		"url": "https://github.com/CainKane/eth-web-front/issues"
 	},
-	"version": "0.1"
+	"version": "0.1.0"
 }
