--- a/package.json
+++ b/package.json
@@ -27,12 +27,9 @@
 		"@web3-react/empty": "^8.0.12-beta.0",
 		"@web3-react/types": "^8.0.12-beta.0",
 		"@web3-react/url": "^8.0.17-beta.0",
-		"ahooks": "^3.3.10",
-		"antd": "^4.20.3",
-		"buffer": "^6.0.3",
-		"dayjs": "^1.11.1",
 		"ahooks": "^3.3.12",
 		"antd": "^4.20.5",
+		"blockies-identicon": "^0.1.0",
 		"buffer": "^6.0.3",
 		"dayjs": "^1.11.2",
 		"ethers": "^5.6.6",
@@ -73,13 +70,13 @@
 		"html-webpack-plugin": "^5.5.0",
 		"less": "^4.1.2",
 		"less-loader": "^10.2.0",
+		"node-polyfill-webpack-plugin": "^1.1.4",
 		"portfinder": "^1.0.28",
 		"react-hot-loader": "^4.13.0",
 		"style-loader": "^3.3.1",
 		"typescript": "^4.6.3",
 		"webpack": "^5.72.0",
 		"webpack-dev-server": "^4.8.1",
-		"node-polyfill-webpack-plugin": "^1.1.4",
 		"webpack-merge": "^5.8.0"
 	},
 	"repository": {
