--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
 		"node-polyfill-webpack-plugin": "^1.1.4",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-router-dom": "^6.3.0"
+		"react-list": "^0.8.17",
+		"react-router-dom": "^6.3.0",
+		"react-sticky": "^6.0.3"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.8",
