--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"@svgr/webpack": "^6.2.1",
 		"@web3-onboard/common": "^2.0.9",
+		"@web3-onboard/core": "^2.2.8",
 		"@web3-onboard/fortmatic": "^2.0.2",
 		"@web3-onboard/gnosis": "^2.0.1",
 		"@web3-onboard/injected-wallets": "^2.0.6",
@@ -36,7 +37,6 @@
 		"lodash": "^4.17.21",
 		"mobx": "^6.5.0",
 		"mobx-react": "^7.3.0",
-		"node-polyfill-webpack-plugin": "^1.1.4",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-list": "^0.8.17",
