--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"mobx-react": "^7.3.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-list": "^0.8.17",
+		"react-infinite-scroller": "^1.2.6",
 		"react-router-dom": "^6.3.0",
 		"react-sticky": "^6.0.3"
 	},
