--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
 	"scripts": {
 		"start": "node webpack.main.mjs server",
 		"debug": "node --inspect-brk webpack.main.mjs server server_dev",
-		"build": "rm -rf dist & node webpack.main.mjs build analyze"
+		"build": "rm -rf dist & node webpack.main.mjs build"
 	},
 	"dependencies": {
+		"@cosmjs/stargate": "^0.28.4",
 		"@svgr/webpack": "^6.2.1",
 		"@web3-onboard/common": "^2.0.9",
 		"@web3-onboard/core": "^2.2.8",
