feat: --设计了路由模块,并重新抽离了组件和目录结构 --封装了utils.withRouter,解决了hooks.useParams在普通组件中无法使用的问题 --完善了readme --webpack增加了@@reaxes和@@requester全局模块 --Reaxes架构支持在hooks中使用
fix:
解决了Reaxes的bug:多次重复执行问题.实现了单例模式的登录和签名态.

chore

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -79,11 +79,11 @@
 			"@@components/*" : [
 				"src/utils/components/*"
 			] ,
-			"-@@common/requests" : [
-				"src/common/requests/index.ts"
+			"@@requester" : [
+				"src/common/requester/index"
 			] ,
-			"-@@common/routes" : [
-				"src/common/routes/index.tsx"
+			"@@requester/*" : [
+				"src/common/requester/*"
 			] ,
 			"@@Public/*" : [
 				"Public/*"
@@ -91,9 +91,14 @@
 			"@@pages/*" : [
 				"src/pages/*"
 			],
+			"@@reaxes" : [
+				"src/common/reaxes/index"
+			],
+			"@@reaxes/*" : [
+				"src/common/reaxes/*"
+			],
 			"@@mobxState" : [
 				"src/common/MobxState.ts",
-				
 			] 
 			
 		} ,
