--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
 	"name": "Daotion-web-interface",
 	"description": "Mainri Labs' font-end eth font-end project",
 	"scripts": {
-		"start": "node --max_old_space_size=18000 webpack.main.mjs server exp",
+		"start": "node --max_old_space_size=18000 webpack.main.mjs server experimental",
 		"debug": "node --inspect-brk webpack.main.mjs server server_dev",
 		"build": "rm -rf dist & node webpack.main.mjs build"
 	},
 	"dependencies": {
 		"@cosmjs/stargate": "^0.28.4",
+		"@ethersproject/wallet": "^5.6.2",
 		"@svgr/webpack": "^6.2.1",
 		"@web3-onboard/common": "^2.0.9",
 		"@web3-onboard/core": "^2.2.8",
