--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 		"react-dom": "^17.0.2",
 		"react-infinite-scroller": "^1.2.6",
 		"react-router-dom": "^6.3.0",
-		"react-sticky": "^6.0.3"
+		"react-sticky": "^6.0.3",
+		"reaxes": "^0.10.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.8",
