--- a/public/env.config.json
+++ b/public/env.config.json
@@ -3,7 +3,7 @@
 		"env" : "server_yang" ,
 		"proxy_path_dev" : "/server_yang" ,
 		"proxy_path_server" : "/server" ,
-		"server_host" : "http://192.168.0.4:8199" ,
+		"server_host" : "https://192.168.0.4:8199" ,
 		"path_rewrite" : {
 			"^/server_yang" : ""
 		} ,
@@ -11,9 +11,10 @@
 	} ,
 	{
 		"env" : "server_dev" ,
+		"env_comment" : "server_dev是阿里云服务器" ,
 		"proxy_path_dev" : "/server_dev" ,
 		"proxy_path_server" : "/server" ,
-		"server_host" : "http://121.199.23.234:8199" ,
+		"server_host" : "https://121.199.23.234:8199" ,
 		"path_rewrite" : {
 			"^/server_dev" : ""
 		} ,
@@ -21,9 +22,10 @@
 	} ,
 	{
 		"env" : "server_production" ,
+		"env_comment" : "生产环境是亚马逊" ,
 		"proxy_path_dev" : "/server" ,
 		"proxy_path_server" : "/server" ,
-		"server_host" : "http://121.199.23.234:8199" ,
+		"server_host" : "https://13.250.36.227:8199" ,
 		"path_rewrite" : {
 			"^/server" : ""
 		} ,
