--- a/public/env.config.json
+++ b/public/env.config.json
@@ -11,8 +11,9 @@
 	} ,
 	{
 		"env" : "server_dev" ,
-		"env_comment" : "server_dev是阿里云服务器" ,
+		"comment__env" : "server_dev是阿里云服务器" ,
 		"proxy_path_dev" : "/server_dev" ,
+		"comment__proxy_path_dev" : "开发环境的devServer前缀" ,
 		"proxy_path_server" : "/server" ,
 		"server_host" : "https://121.199.23.234:8199" ,
 		"path_rewrite" : {
@@ -23,7 +24,7 @@
 	{
 		"env" : "server_production" ,
 		"env_comment" : "生产环境是亚马逊" ,
-		"proxy_path_dev" : "/server" ,
+		"proxy_path_dev" : "/server_production" ,
 		"proxy_path_server" : "/server" ,
 		"server_host" : "https://13.250.36.227:8199" ,
 		"path_rewrite" : {
