--- a/public/env.config.json
+++ b/public/env.config.json
@@ -26,7 +26,7 @@
 		"env_comment" : "生产环境是亚马逊" ,
 		"proxy_path_dev" : "/server_production" ,
 		"proxy_path_server" : "/server" ,
-		"server_host" : "https://13.250.36.227:8199" ,
+		"server_host" : "https://app.daotesting.com/" ,
 		"path_rewrite" : {
 			"^/server" : ""
 		} ,
