--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"mobx": "^6.5.0",
 		"mobx-react": "^7.3.0",
 		"react": "^17.0.2",
+		"react-cropper": "^2.1.8",
 		"react-dom": "^17.0.2",
 		"react-infinite-scroller": "^1.2.6",
 		"react-router-dom": "^6.3.0",
