--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"less-loader": "^10.2.0",
 		"node-polyfill-webpack-plugin": "^1.1.4",
 		"portfinder": "^1.0.28",
+		"raw-loader": "^4.0.2",
 		"react-hot-loader": "^4.13.0",
 		"style-loader": "^3.3.1",
 		"typescript": "^4.6.3",
