--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "Daotion-web-interface",
 	"description": "Mainri Labs' font-end eth font-end project",
 	"scripts": {
-		"start": "node --max_old_space_size=18000 webpack.main.mjs server experimental",
+		"start": "node --max_old_space_size=18000 webpack.main.mjs server",
 		"debug": "node --inspect-brk webpack.main.mjs server server_dev",
 		"build": "rm -rf dist & node webpack.main.mjs build production"
 	},
