--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"description": "Mainri Labs' font-end eth font-end project",
 	"scripts": {
 		"start": "node --max_old_space_size=18000 webpack.main.mjs server",
-		"debug": "node --inspect-brk webpack.main.mjs server server_dev",
+		"debug": "node --inspect-brk webpack.main.mjs server --max_old_space_size=18000",
 		"build": "rm -rf dist & node webpack.main.mjs build production"
 	},
 	"dependencies": {
