--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,11 +99,11 @@
 			"@@pages/*" : [
 				"src/pages/*"
 			],
-			"@@reaxes" : [
-				"src/reaxes/index"
+			"@@reaxels" : [
+				"src/reaxels/index"
 			],
-			"@@reaxes/*" : [
-				"src/reaxes/*"
+			"@@reaxels/*" : [
+				"src/reaxels/*"
 			],
 			"@@mobxState" : [
 				"src/common/MobxState.ts"
