--- a/package.json
+++ b/package.json
@@ -19,16 +19,11 @@
 		"@web3-onboard/ledger": "^2.0.4",
 		"@web3-onboard/magic": "^2.0.3",
 		"@web3-onboard/portis": "^2.0.0",
-		"@web3-onboard/react": "^2.1.6",
+		"@web3-onboard/react": "^2.2.4",
 		"@web3-onboard/torus": "^2.0.1",
 		"@web3-onboard/trezor": "^2.0.5",
 		"@web3-onboard/walletconnect": "^2.0.1",
 		"@web3-onboard/walletlink": "^2.0.1",
-		"@web3-react/core": "^8.0.23-beta.0",
-		"@web3-react/eip1193": "^8.0.18-beta.0",
-		"@web3-react/empty": "^8.0.12-beta.0",
-		"@web3-react/types": "^8.0.12-beta.0",
-		"@web3-react/url": "^8.0.17-beta.0",
 		"ahooks": "^3.3.12",
 		"antd": "^4.20.5",
 		"dayjs": "^1.11.2",
@@ -79,6 +74,7 @@
 		"node-polyfill-webpack-plugin": "^1.1.4",
 		"portfinder": "^1.0.28",
 		"react-hot-loader": "^4.13.0",
+		"speed-measure-webpack-plugin": "^1.5.0",
 		"style-loader": "^3.3.1",
 		"typescript": "^4.6.3",
 		"webpack": "^5.72.0",
