--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,9 @@
 		"allowSyntheticDefaultImports" : true ,
 		"allowUnusedLabels" : true ,
 		"baseUrl" : "." ,
-		"declaration" : true ,
+		"declaration" : false ,
 		"declarationDir" : "src/common/Global DTS" ,
-		"declarationMap" : true ,
+		"declarationMap" : false ,
 		"esModuleInterop" : true ,
 		"experimentalDecorators" : true ,
 		"jsx" : "react" ,
