--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "rm -rf dist & node webpack.main.mjs build production"
 	},
 	"dependencies": {
+		"@ant-design/icons": "^4.7.0",
 		"@download/blockies": "^1.0.3",
 		"@ethersproject/wallet": "^5.6.2",
 		"@web3-onboard/common": "^2.0.9",
