--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"react": "^17.0.2",
 		"react-cropper": "^2.1.8",
 		"react-dom": "^17.0.2",
+		"react-draggable": "^4.4.5",
 		"react-infinite-scroller": "^1.2.6",
 		"react-router-dom": "^6.3.0",
 		"react-sticky": "^6.0.3",
