--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@web3-onboard/walletlink": "^2.0.1",
 		"ahooks": "^3.3.12",
 		"antd": "^4.20.5",
+		"copy-to-clipboard": "^3.3.2",
 		"dayjs": "^1.11.2",
 		"ethers": "^5.6.6",
 		"lodash": "^4.17.21",
