--- a/package.json
+++ b/package.json
@@ -1,13 +1,75 @@
 {
 	"name": "daotion-app-reaxes",
 	"scripts": {
-		"start": ""
+		"start": "node scripts/start.mjs",
+		"node" : "node --stack-trace-limit=30 --stack-size=1024",
+		"start-daotion-app-web": "node --inspect-brk scripts/start.mjs daotion-app-web",
+		"start-platform": "npm run node scripts/start.mjs overseas-payment-merchant-operation-platform",
+		"start-admin": "npm run node scripts/start.mjs overseas-payment-merchant-background-admin"
 	},
 	"private": true,
 	"workspaces": [
 		"packages/*"
 	],
+	"devDependencies": {
+		"@babel/core": "7.14.8",
+		"@babel/plugin-proposal-class-static-block": "7.14.5",
+		"@babel/plugin-proposal-decorators": "7.14.5",
+		"@babel/plugin-proposal-do-expressions": "7.14.5",
+		"@babel/plugin-proposal-export-default-from": "7.14.5",
+		"@babel/plugin-proposal-function-bind": "7.14.5",
+		"@babel/plugin-proposal-function-sent": "7.14.5",
+		"@babel/plugin-proposal-partial-application": "7.14.5",
+		"@babel/plugin-proposal-pipeline-operator": "7.14.8",
+		"@babel/plugin-proposal-private-property-in-object": "7.14.5",
+		"@babel/plugin-proposal-record-and-tuple": "7.14.5",
+		"@babel/plugin-proposal-throw-expressions": "7.14.5",
+		"@babel/plugin-syntax-bigint": "7.8.3",
+		"@babel/preset-env": "7.14.8",
+		"@babel/preset-react": "7.14.5",
+		"@babel/preset-typescript": "7.14.5",
+		"@cosmjs/stargate": "0.28.4",
+		"@hot-loader/react-dom": "17.0.2",
+		"@svgr/webpack": "6.2.1",
+		"@types/less": "3.0.3",
+		"@types/lodash": "4.14.182",
+		"@types/react": "17.0.47",
+		"@types/react-dom": "17.0.16",
+		"@types/react-router-dom": "5.3.3",
+		"babel-loader": "8.2.5",
+		"compression-webpack-plugin": "10.0.0",
+		"cross-env": "7.0.3",
+		"css-loader": "6.7.1",
+		"dayjs": "1.11.5",
+		"html-webpack-plugin": "5.5.0",
+		"less": "4.1.2",
+		"less-loader": "10.2.0",
+		"node-polyfill-webpack-plugin": "1.1.4",
+		"portfinder": "1.0.28",
+		"react-hot-loader": "4.13.0",
+		"speed-measure-webpack-plugin": "1.5.0",
+		"style-loader": "3.3.1",
+		"typescript": "4.6.3",
+		"webpack": "5.72.0",
+		"webpack-bundle-analyzer": "4.5.0",
+		"webpack-dev-server": "4.8.1",
+		"webpack-merge": "5.8.0"
+	},
 	"dependencies": {
-		"reaxes": "^0.10.11"
+		"@types/webpack": "5.28.0",
+		"reaxes": "0.10.11"
+	},
+	"prettier": {
+		"printWidth": 120,
+		"tabWidth": 3,
+		"useTabs": true,
+		"semi": true,
+		"jsxSingleQuote": false,
+		"singleQuote": true,
+		"trailingComma": "all",
+		"bracketSameLine": false,
+		"arrowParens": "always",
+		"bracketSpacing": true,
+		"parser": "typescript"
 	}
 }
