--- a/packages/daotion-app-web/tsconfig.json
+++ b/packages/daotion-app-web/tsconfig.json
@@ -5,7 +5,6 @@
 		"allowUnusedLabels" : true ,
 		"baseUrl" : "." ,
 		"declaration" : false ,
-		"declarationDir" : "src/common/Global DTS" ,
 		"declarationMap" : false ,
 		"esModuleInterop" : true ,
 		"experimentalDecorators" : true ,
@@ -16,43 +15,6 @@
 		"strictBindCallApply" : false ,
 		"strictNullChecks" : false ,
 		"allowUnreachableCode" : true ,
-		"lib" : [
-			"ES5" ,
-			"ES6" ,
-			"ES2015" ,
-			"ES7" ,
-			"ES2016" ,
-			"ES2017" ,
-			"ES2018" ,
-			"ESNext" ,
-			"DOM.Iterable" ,
-			"WebWorker" ,
-			"ScriptHost" ,
-			"ES2015.Core" ,
-			"ES2015.Collection" ,
-			"ES2015.Generator" ,
-			"ES2015.Iterable" ,
-			"ES2015.Promise" ,
-			"ES2015.Proxy" ,
-			"ES2015.Reflect" ,
-			"ES2015.Symbol" ,
-			"ES2015.Symbol.WellKnown" ,
-			"ES2016.Array.Include" ,
-			"ES2017.object" ,
-			"ES2017.Intl" ,
-			"ES2017.SharedMemory" ,
-			"ES2017.String" ,
-			"ES2017.TypedArrays" ,
-			"ES2018.Intl" ,
-			"ES2018.Promise" ,
-			"ES2018.RegExp" ,
-			"ESNext.AsyncIterable" ,
-			"ESNext.Array" ,
-			"ESNext.Intl" ,
-			"ESNext.Symbol" ,
-			"react",
-			"DOM"
-		] ,
 		"module" : "CommonJS" ,
 		"moduleResolution" : "node" ,
 		"noEmit" : true ,
@@ -61,88 +23,35 @@
 		"noImplicitUseStrict" : false ,
 		"noUnusedLocals" : false ,
 		"noUnusedParameters" : false ,
-		"paths" : {
-			"@@root/*" : ["*"] ,
-			"@@toolkits/*" : [
-				"src/tool-kits/*"
-			] ,
-			"@@toolkits" : [
-				"src/tool-kits"
-			] ,
-			"@@Xcomponents/*" : [
-				"src/common/Xcomponents/*"
-			] ,
-			"@@Xcomponents" : [
-				"src/common/Xcomponents/index.tsx"
-			] ,
-			"@@SvgComponents/*" : [
-				"src/common/SvgComponents/*"
-			] ,
-			"@@SvgComponents" : [
-				"src/common/SvgComponents/index.tsx"
-			] ,
-			"@@utils" : [
-				"src/utils/index.tsx"
-			] ,
-			"@@utils/*" : [
-				"src/utils/*"
-			] ,
-			"@@components" : [
-				"src/utils/components/index.ts"
-			] ,
-			"@@components/*" : [
-				"src/utils/components/*"
-			] ,
-			"@@requester" : [
-				"src/common/requester/index"
-			] ,
-			"@@requester/*" : [
-				"src/common/requester/*"
-			] ,
-			"@@requests" : [
-				"src/requests/index"
-			] ,
-			"@@requests/*" : [
-				"src/requests/*"
-			] ,
-			"@@public/*" : [
-				"public/*"
-			],
-			"@@pages/*" : [
-				"src/pages/*"
-			],
-			"@@reaxels" : [
-				"src/reaxels/index"
-			],
-			"@@reaxels/*" : [
-				"src/reaxels/*"
-			],
-			"@@mobxState" : [
-				"src/common/MobxState.ts"
-			] 
-			
-		} ,
 		"preserveConstEnums" : true ,
 		"removeComments" : true ,
 		"sourceMap" : true ,
 		"target" : "ES2020" ,
-		"watch" : true ,
-		"types" : [ "index.d.ts" ] ,
-		"allowSyntheticDefaultImports" : true
+		"watch" : false ,
+		"allowSyntheticDefaultImports" : true ,
+		"paths" : {
+			"#requester" : [ "../requester" ] ,
+			"#reaxels" : [ "../reaxels" ] ,
+			"#reaxes" : [ "../reaxes" ] ,
+			"#toolkits" : [ "../toolkits" ] ,
+			"#utils" : [ "../utils" ] ,
+			"#statics" : [ "../../statics" ] ,
+			"@@pages" : [ "src/pages" ] ,
+			"@@reaxels" : [ "src/reaxels" ] ,
+			"@@requester" : [ "src/requester" ] ,
+			"@@toolkits" : [ "src/toolkits" ],
+			"@@Xcomponents" : [ "src/Xcomponents" ], 
+			"@@public" : [ "public" ] 
+		} ,
+		"lib" : [
+			"ES5" , "ES6" , "ES2015" , "ES7" , "ES2016" , "ES2017" , "ES2018" , "ESNext" , "DOM.Iterable" , "WebWorker" , "ScriptHost" , "ES2015.Core" , "ES2015.Collection" , "ES2015.Generator" , "ES2015.Iterable" , "ES2015.Promise" , "ES2015.Proxy" , "ES2015.Reflect" , "ES2015.Symbol" , "ES2015.Symbol.WellKnown" , "ES2016.Array.Include" , "ES2017.object" , "ES2017.Intl" , "ES2017.SharedMemory" , "ES2017.String" , "ES2017.TypedArrays" , "ES2018.Intl" , "ES2018.Promise" , "ES2018.RegExp" , "ESNext.AsyncIterable" , "ESNext.Array" , "ESNext.Intl" , "ESNext.Symbol" , "react" , "DOM"
+		]
 	} ,
-	"include" : [
-		"**/*.ts" ,
-		"**/*.tsx" ,
-		"src/*" ,
-		"src" ,
-	
+	"references" : [
+		{
+			"path" : "../../"
+		}
 	] ,
-	"exclude" : [
-		"node_modules" ,
-		"dist" ,
-		".git" ,
-		".idea" ,
-		".svn" ,
-		"tsconfig.json"
-	]
+	"include" : [ "**/*.ts" , "**/*.tsx" ] ,
+	"exclude" : [ "node_modules" , "dist" , ".git" , ".idea" , ".svn" ]
 }
