--- a/packages/overseas-payment-merchant-operation-platform/package.json
+++ b/packages/overseas-payment-merchant-operation-platform/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"antd": "4.22.7",
 		"copy-to-clipboard": "3.3.2",
+		"crypto-js": "4.1.1",
 		"dayjs": "1.11.2",
 		"lodash": "4.17.21",
 		"mobx": "6.5.0",
