--- a/packages/requester/package.json
+++ b/packages/requester/package.json
@@ -1,7 +1,7 @@
 {
-	"name" : "requester" ,
-	"main" : "src",
-	"version" : "1.0.0" ,
+	"name": "requester",
+	"main": "src",
+	"version": "1.0.0",
 	"prettier": {
 		"printWidth": 120,
 		"tabWidth": 3,
@@ -15,7 +15,8 @@
 		"bracketSpacing": true,
 		"parser": "typescript"
 	},
-	"dependencies" : {
-		"lodash": "^4.17.21"
+	"dependencies": {
+		"lodash": "^4.17.21",
+		"url": "^0.11.0"
 	}
 }
