--- a/packages/overseas-payment-merchant-background-admin/proxy.configuration.json
+++ b/packages/overseas-payment-merchant-background-admin/proxy.configuration.json
@@ -3,7 +3,7 @@
 		"env" : "server_yang" ,
 		"proxy_path_dev" : "/server_yang" ,
 		"proxy_path_server" : "/server" ,
-		"server_host" : "https://192.168.0.4:8199" ,
+		"server_host" : "https://192.168.0.4:8000" ,
 		"path_rewrite" : {
 			"^/server_yang" : ""
 		} ,
@@ -11,11 +11,11 @@
 	} ,
 	{
 		"env" : "server_dev" ,
-		"comment__env" : "server_dev是阿里云服务器" ,
+		"comment__env" : "server_dev是亚马逊-巴西" ,
 		"proxy_path_dev" : "/server_dev" ,
 		"comment__proxy_path_dev" : "开发环境的devServer前缀" ,
 		"proxy_path_server" : "/server" ,
-		"server_host" : "https://test2.xfpoker.com:8199" ,
+		"server_host" : "http://payment.easypaymentbank.com:8000" ,
 		"path_rewrite" : {
 			"^/server_dev" : ""
 		} ,
@@ -26,7 +26,7 @@
 		"env_comment" : "生产环境是亚马逊" ,
 		"proxy_path_dev" : "/server_production" ,
 		"proxy_path_server" : "/server" ,
-		"server_host" : "https://app.daotesting.com/" ,
+		"server_host" : "https://app.daotesting.com" ,
 		"path_rewrite" : {
 			"^/server" : ""
 		} ,
