--- a/packages/overseas-payment-merchant-background-admin/tsconfig.json
+++ b/packages/overseas-payment-merchant-background-admin/tsconfig.json
@@ -31,6 +31,7 @@
 		"allowSyntheticDefaultImports" : true ,
 		"paths" : {
 			"#requester" : [ "../requester" ] ,
+			"#requester/*" : [ "../requester/*" ] ,
 			"#reaxels" : [ "../reaxels" ] ,
 			"#reaxes" : [ "../reaxes" ] ,
 			"#toolkits" : [ "../toolkits" ] ,
