--- a/packages/overseas-payment-merchant-background-admin/package.json
+++ b/packages/overseas-payment-merchant-background-admin/package.json
@@ -20,6 +20,7 @@
 		"webpack": "5.72.0"
 	},
 	"dependencies": {
+		"@hot-loader/react-dom": "17.0.2",
 		"antd": "4.22.7",
 		"copy-to-clipboard": "3.3.2",
 		"crypto-js": "4.1.1",
