--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 		"node": "node --stack-trace-limit=30 --stack-size=1024",
 		"start-daotion-app-web": "npm run node scripts/start.mjs daotion-app-web",
 		"start-platform": "npm run node scripts/start.mjs overseas-payment-merchant-operation-platform",
-		"start-admin": "npm run node scripts/start.mjs overseas-payment-merchant-background-admin server_dev"
+		"start-admin": "npm run node scripts/start.mjs overseas-payment-merchant-background-admin server_dev",
+		"start-cashier": "npm run node scripts/start.mjs overseas-payment-cashier server_dev"
 	},
 	"private": true,
 	"workspaces": [
