--- a/packages/overseas-payment-cashier/package.json
+++ b/packages/overseas-payment-cashier/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "overseas-payment-cashier",
 	"version": "1.0.0",
+	"scripts": {},
 	"prettier": {
 		"printWidth": 120,
 		"tabWidth": 3,
@@ -12,13 +13,23 @@
 		"bracketSameLine": false,
 		"arrowParens": "always",
 		"bracketSpacing": true,
-		"parser": "typescript"
+		"parser": "babel"
 	},
 	"devDependencies": {
+		"@types/react": "^18.0.24",
 		"prettier": "2.7.1",
 		"webpack": "5.72.0"
 	},
 	"dependencies": {
-		"antd": "4.22.7"
+		"@hot-loader/react-dom": "17.0.2",
+		"antd-mobile": "^5.24.2",
+		"copy-to-clipboard": "3.3.2",
+		"crypto-js": "4.1.1",
+		"dayjs": "1.11.2",
+		"lodash": "4.17.21",
+		"mobx": "6.5.0",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-router-dom": "6.4.1"
 	}
 }
