--- a/packages/overseas-payment-cashier/package.json
+++ b/packages/overseas-payment-cashier/package.json
@@ -28,8 +28,10 @@
 		"dayjs": "1.11.2",
 		"lodash": "4.17.21",
 		"mobx": "6.5.0",
+		"qs": "6.11.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"react-router-dom": "6.4.1"
+		"react-router-dom": "6.4.1",
+		"reaxes": "^0.10.13"
 	}
 }
