--- a/packages/requester/package.json
+++ b/packages/requester/package.json
@@ -15,8 +15,10 @@
 		"bracketSpacing": true,
 		"parser": "typescript"
 	},
+	"devDependencies": {
+	},
 	"dependencies": {
-		"lodash": "^4.17.21",
+		"lodash": "4.17.21",
 		"url": "^0.11.0"
 	}
 }
