--- a/packages/overseas-payment-merchant-background-admin/tsconfig.json
+++ b/packages/overseas-payment-merchant-background-admin/tsconfig.json
@@ -34,6 +34,7 @@
 			"#requester" : [ "../requester" ] ,
 			"#requester/*" : [ "../requester/*" ] ,
 			"#reaxels" : [ "../reaxels" ] ,
+			"#reaxels/*" : [ "../reaxels/*" ] ,
 			"#reaxes" : [ "../reaxes" ] ,
 			"#toolkits/*" : [ "../toolkits/*" ] ,
 			"#utils" : [ "../utils" ] ,
@@ -50,10 +51,10 @@
 			"@@requests/*" : [ "src/requests/*" ] ,
 			"@@toolkits" : [ "src/toolkits" ],
 			"@@toolkits/*" : [ "src/toolkits/*" ],
-			"@@Xcomponents" : [ "src/Xcomponents" ], ,
-			"@@Xcomponents/*" : [ "src/Xcomponents/*" ], ,
-			"@@SVGcomponents" : [ "src/SVGcomponents" ], ,
-			"@@SVGcomponents/*" : [ "src/SVGcomponents/*" ], ,
+			"@@Xcomponents" : [ "src/Xcomponents" ], 
+			"@@Xcomponents/*" : [ "src/Xcomponents/*" ], 
+			"@@SVGcomponents" : [ "src/SVGcomponents" ],
+			"@@SVGcomponents/*" : [ "src/SVGcomponents/*" ],
 			"@@declarations/*" : [ "src/declarations/*" ] ,
 			"@@public/*" : [ "public/*" ] 
 		} ,
