--- a/packages/overseas-payment-cashier/tsconfig.json
+++ b/packages/overseas-payment-cashier/tsconfig.json
@@ -30,6 +30,7 @@
 		"watch" : false ,
 		"allowSyntheticDefaultImports" : true ,
 		"paths" : {
+			"#project-root/*" : [ "../../*" ] ,
 			"#requester" : [ "../requester" ] ,
 			"#requester/*" : [ "../requester/*" ] ,
 			"#reaxels" : [ "../reaxels" ] ,
@@ -38,7 +39,7 @@
 			"#toolkits/*" : [ "../toolkits/*" ] ,
 			"#utils" : [ "../utils" ] ,
 			"#statics" : [ "../../statics" ] ,
-			"@@declarations/*" : [ "src/declarations/*" ] ,
+			"@@root/*" : [ "./*" ] ,
 			"@@pages" : [ "src/pages" ] ,
 			"@@pages/*" : [ "src/pages/*" ] ,
 			"@@utils" : [ "src/utils" ] ,
@@ -54,6 +55,7 @@
 			"@@Xcomponents/*" : [ "src/Xcomponents/*" ], 
 			"@@SVGcomponents" : [ "src/SVGcomponents" ], 
 			"@@SVGcomponents/*" : [ "src/SVGcomponents/*" ], 
+			"@@declarations/*" : [ "src/declarations/*" ] ,
 			"@@public/*" : [ "public/*" ] 
 		} ,
 		"lib" : [
