--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 		"start": "node scripts/start.mjs",
 		"node": "node --stack-trace-limit=30 --stack-size=1024",
 		"start-daotion-app-web": "npm run node scripts/start.mjs daotion-app-web",
-		"start-platform": "npm run node scripts/start.mjs overseas-payment-merchant-operation-platform",
+		"start-platform": "npm run node scripts/start.mjs overseas-payment-merchant-operation-platform server_dev",
 		"start-admin": "npm run node scripts/start.mjs overseas-payment-merchant-background-admin server_dev",
 		"start-cashier": "npm run node scripts/start.mjs overseas-payment-cashier server_dev"
 	},
