--- a/packages/overseas-payment-merchant-operation-platform/proxy.configuration.json
+++ b/packages/overseas-payment-merchant-operation-platform/proxy.configuration.json
@@ -3,7 +3,7 @@
 		"env" : "server_yang" ,
 		"proxy_path_dev" : "/server_yang" ,
 		"proxy_path_server" : "/server" ,
-		"server_host" : "https://192.168.0.4:8000" ,
+		"server_host" : "https://192.168.0.4:8010" ,
 		"path_rewrite" : {
 			"^/server_yang" : ""
 		} ,
@@ -15,7 +15,7 @@
 		"proxy_path_dev" : "/server_dev" ,
 		"comment__proxy_path_dev" : "开发环境的devServer前缀" ,
 		"proxy_path_server" : "/server" ,
-		"server_host" : "http://payment.easypaymentbank.com:8000" ,
+		"server_host" : "http://agent.easypaymentbank.com:8010" ,
 		"path_rewrite" : {
 			"^/server_dev" : ""
 		} ,
