--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
 	"name": "daotion-app-reaxes",
 	"scripts": {
 		"start": "node scripts/start.mjs",
+		"build": "node scripts/build.mjs build",
 		"node": "node --stack-trace-limit=30 --stack-size=1024",
 		"start-daotion-app-web": "npm run node scripts/start.mjs daotion-app-web",
 		"start-platform": "npm run node scripts/start.mjs overseas-payment-merchant-operation-platform server_dev",
 		"start-admin": "npm run node scripts/start.mjs overseas-payment-merchant-background-admin server_dev",
+		"build-admin": "npm run build overseas-payment-merchant-background-admin server_dev production",
 		"start-cashier": "npm run node scripts/start.mjs overseas-payment-cashier server_dev"
 	},
 	"private": true,
@@ -38,6 +40,7 @@
 		"@types/react-dom": "17.0.16",
 		"@types/react-router-dom": "5.3.3",
 		"babel-loader": "8.2.5",
+		"clean-webpack-plugin": "^4.0.0",
 		"compression-webpack-plugin": "10.0.0",
 		"cross-env": "7.0.3",
 		"css-loader": "6.7.1",
