--- a/packages/overseas-payment-merchant-background-admin/package.json
+++ b/packages/overseas-payment-merchant-background-admin/package.json
@@ -17,8 +17,9 @@
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.24",
+		"clean-webpack-plugin": "^4.0.0",
 		"prettier": "2.7.1",
-		"webpack": "5.72.0"
+		"webpack": "5.74.0"
 	},
 	"dependencies": {
 		"@hot-loader/react-dom": "17.0.2",
