--- a/packages/overseas-payment-cashier/package.json
+++ b/packages/overseas-payment-cashier/package.json
@@ -16,13 +16,13 @@
 		"parser": "babel"
 	},
 	"devDependencies": {
-		"@types/react": "^18.0.24",
+		"@types/react": "17.0.2",
 		"prettier": "2.7.1",
 		"webpack": "5.72.0"
 	},
 	"dependencies": {
 		"@hot-loader/react-dom": "17.0.2",
-		"antd-mobile": "^5.24.2",
+		"antd-mobile": "5.25.1",
 		"copy-to-clipboard": "3.3.2",
 		"crypto-js": "4.1.1",
 		"dayjs": "1.11.2",
