--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"start-platform": "npm run node scripts/start.mjs overseas-payment-merchant-operation-platform server_dev",
 		"start-admin": "npm run node scripts/start.mjs overseas-payment-merchant-background-admin server_dev",
 		"build-admin": "npm run build overseas-payment-merchant-background-admin server_dev production",
+		"build-platform": "npm run build overseas-payment-merchant-operation-platform server_dev production",
 		"start-cashier": "npm run node scripts/start.mjs overseas-payment-cashier server_dev"
 	},
 	"private": true,
