--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"scripts": {
 		"start": "node scripts/start.mjs",
 		"build": "node scripts/build.mjs build",
-		"node": "node --stack-trace-limit=30 --stack-size=1024",
+		"node": "node --stack-trace-limit=50 --stack-size=1024",
 		"start-daotion-app-web": "npm run node scripts/start.mjs daotion-app-web server_dev",
-		"start-daotion-homepage": "npm run node scripts/start.mjs daotion-honmepage-web server_dev",
+		"start-daotion-homepage": "npm run node scripts/start.mjs daotion-homepage-web server_dev",
 		"start-platform": "npm run node scripts/start.mjs overseas-payment-merchant-operation-platform server_dev",
 		"build-platform": "npm run build overseas-payment-merchant-operation-platform server_dev production",
 		"start-admin": "npm run node scripts/start.mjs overseas-payment-merchant-background-admin server_dev",
@@ -18,35 +18,34 @@
 		"packages/*"
 	],
 	"devDependencies": {
-		"@babel/core": "7.14.8",
-		"@babel/plugin-proposal-class-static-block": "7.14.5",
-		"@babel/plugin-proposal-decorators": "7.14.5",
-		"@babel/plugin-proposal-do-expressions": "7.14.5",
-		"@babel/plugin-proposal-export-default-from": "7.14.5",
-		"@babel/plugin-proposal-function-bind": "7.14.5",
-		"@babel/plugin-proposal-function-sent": "7.14.5",
-		"@babel/plugin-proposal-partial-application": "7.14.5",
-		"@babel/plugin-proposal-pipeline-operator": "7.14.8",
-		"@babel/plugin-proposal-private-property-in-object": "7.14.5",
-		"@babel/plugin-proposal-record-and-tuple": "7.14.5",
-		"@babel/plugin-proposal-throw-expressions": "7.14.5",
+		"@babel/core": "7.20.5",
+		"@babel/plugin-proposal-class-static-block": "7.18.6",
+		"@babel/plugin-proposal-decorators": "7.20.5",
+		"@babel/plugin-proposal-do-expressions": "7.18.6",
+		"@babel/plugin-proposal-export-default-from": "7.18.10",
+		"@babel/plugin-proposal-function-bind": "7.18.9",
+		"@babel/plugin-proposal-function-sent": "7.18.6",
+		"@babel/plugin-proposal-partial-application": "7.18.9",
+		"@babel/plugin-proposal-pipeline-operator": "7.18.9",
+		"@babel/plugin-proposal-private-property-in-object": "7.20.5",
+		"@babel/plugin-proposal-record-and-tuple": "7.18.6",
+		"@babel/plugin-proposal-throw-expressions": "7.18.6",
 		"@babel/plugin-syntax-bigint": "7.8.3",
-		"@babel/preset-env": "7.14.8",
-		"@babel/preset-react": "7.14.5",
-		"@babel/preset-typescript": "7.14.5",
-		"@cosmjs/stargate": "0.28.4",
+		"@babel/preset-env": "7.20.2",
+		"@babel/preset-react": "7.18.6",
+		"@babel/preset-typescript": "7.18.6",
 		"@hot-loader/react-dom": "17.0.2",
-		"@svgr/webpack": "6.2.1",
+		"@svgr/webpack": "6.5.1",
 		"@types/less": "3.0.3",
 		"@types/lodash": "4.14.182",
 		"@types/react": "17.0.47",
 		"@types/react-dom": "17.0.18",
-		"babel-loader": "8.2.5",
-		"clean-webpack-plugin": "^4.0.0",
+		"babel-loader": "8.3.0",
+		"clean-webpack-plugin": "4.0.0",
 		"compression-webpack-plugin": "10.0.0",
 		"cross-env": "7.0.3",
 		"css-loader": "6.7.1",
-		"dayjs": "1.11.5",
+		"dayjs": "1.11.6",
 		"html-webpack-plugin": "5.5.0",
 		"less": "4.1.2",
 		"less-loader": "10.2.0",
